...
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="time" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GcE-Bj-6d8">
                                <rect key="frame" x="217" y="273" width="144" height="30"/>
                                <nil key="textColor"/>
...
                        <viewLayoutGuide key="safeArea" id="LO6-PY-XyG"/>
                    </view>
                    <navigationItem key="navigationItem" title="Add Mission" id="kJf-Ce-vkf">
                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="Asb-Pl-ZwA">
                            <connections>
...
                                <rect key="frame" x="120" y="562" width="174" height="51"/>
                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                <state key="normal" title="Confirm">
                                    <color key="titleColor" red="0.43857644663081419" green="0.85718911917098439" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                </state>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q1W-mD-Nqk">
                                <rect key="frame" x="225.66666666666663" y="170" width="30.333333333333343" height="26.5"/>
                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
...
                                <rect key="frame" x="177.5" y="707" width="59" height="48"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
                                <state key="normal" title="BUY">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                    <color key="titleShadowColor" red="0.30602404080000001" green="0.67908988159999994" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter UserID" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iWq-5u-Byy">
                                <rect key="frame" x="122" y="287" width="155" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                </connections>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Nvd-zU-7Fr">
                                <rect key="frame" x="122" y="347" width="155" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                <rect key="frame" x="182.5" y="658" width="49" height="36"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title="Login">
                                    <color key="titleColor" red="0.98823529409999999" green="0.76470588240000004" blue="0.31372549020000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                                <rect key="frame" x="177.5" y="720" width="59" height="36"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title="Sign in">
                                    <color key="titleColor" red="1" green="0.24401551730000001" blue="0.13566543740000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                                <rect key="frame" x="143" y="776" width="128" height="36"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title="Use as a guest">
                                    <color key="titleColor" red="0.060015268623828888" green="0.89071935415267944" blue="0.16463598608970642" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                                </connections>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Create a new UserID" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="83G-Td-Azm">
                                <rect key="frame" x="139" y="300" width="157" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                            <constraint firstAttribute="height" constant="50" id="KXa-tI-6Id"/>
                                        </constraints>
                                        <state key="normal" title="START">
                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                            <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
