...
        nameTextField.resignFirstResponder()
        timeTextField.resignFirstResponder()
        
    }
    
    
    // action function for "Save" button, which save the data in textfield and pickerview to core data
    @IBAction func saveAssignment(_ sender: Any) {
        let name = nameTextField.text
        let timeText = timeTextField.text ?? ""
        let time = Double(timeText) ?? 0.0
        let priority = priorityTemp
        
...
