...
    @IBOutlet weak var missionsTableView: UITableView!
    
    // functions called before the screen load.
    override func viewDidLoad() {
        super.viewDidLoad()
        
        title = "Mission List"
        
        
    }
    
    //  functions that fetch data from coredata to an array
    override func viewWillAppear(_ animated: Bool) {
...
